# ray-sql

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  requirements-in.txt  requirements.in
.github/workflows/: rust.yml
docs/: README.md
examples/: tips.parquet  tips.py
raysql/: __init__.py  context.py  main.py  ray_utils.py  worker.py
raysql/tests/: test_context.py
src/: context.rs  dataset.rs  lib.rs  planner.rs  query_stage.rs  shuffle.rs  utils.rs
src/proto/: mod.rs  raysql.proto
src/shuffle/: codec.rs  mod.rs  reader.rs  writer.rs
src/shuffle/ray_shuffle/: mod.rs  reader.rs  writer.rs
testdata/expected-plans/: q1.txt  q10.txt  q11.txt  q12.txt  q13.txt  q14.txt  q16.txt  q17.txt  q18.txt  q19.txt  q2.txt  q20.txt  q21.txt  q22.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt  q9.txt
