[package]
name = "raysql"
description = "RaySQL: DataFusion on Ray"
homepage = "https://github.com/andygrove/ray-sql"
repository = "https://github.com/andygrove/ray-sql"
authors = ["Andy Grove <andygrove73@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
rust-version = "1.62"
build = "build.rs"

[dependencies]
datafusion = { version = "17.0.0", features = ["pyarrow", "avro"] }
datafusion-proto = "17.0.0"
datafusion-python = { git = "https://github.com/andygrove/arrow-datafusion-python", rev = "7164900a32b25f0644a3294389f02e28e94da8a3" }
futures = "0.3"
glob = "0.3"
log = "0.4"
prost = "0.11"
prost-types = "0.11"
pyo3 = { version = "~0.17.3", features = ["extension-module", "abi3", "abi3-py37"] }
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync"] }
uuid = "1.2"

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }

[lib]
name = "raysql"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "raysql._raysql_internal"