[package]
name = "raysql"
description = "RaySQL: DataFusion on Ray"
homepage = "https://github.com/datafusion-contrib/ray-sql"
repository = "https://github.com/datafusion-contrib/ray-sql"
authors = ["Andy Grove <andygrove73@gmail.com>", "Frank Luan <lsf@berkeley.edu>"]
version = "0.6.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
rust-version = "1.62"
build = "build.rs"

[dependencies]
datafusion = { version = "41.0.0", features = ["pyarrow", "avro"] }
datafusion-proto = "41.0.0"
datafusion-python = "41.0.0"
futures = "0.3"
glob = "0.3"
log = "0.4"
prost = "0.12"
prost-types = "0.12"
pyo3 = { version = "0.21", features = ["extension-module", "abi3", "abi3-py38"] }
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync"] }
uuid = "1.2"

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }

[lib]
name = "raysql"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "raysql._raysql_internal"

[profile.release]
codegen-units = 1
lto = true